Poprawa zapytan o projekty oraz naprawa wylogowywania
